Ajout d'un page récapitulant le jeu stratégique.

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -82,6 +82,9 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Jeu<span class="caret"></span></a>
 					<ul class="dropdown-menu">
+						<li><a href="{{ path('econnomie') }}">Economie</a></li>
+						<li><a href="{{ path('strategie') }}">Stratégie</a></li>
+						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
 						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
 						<li><a href="{{ path('trombinoscope.perso') }}">Selection</a></li>
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
@@ -90,11 +93,9 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('ingredient.admin.list') }}">Ingredients</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
-						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
 						<li><a href="{{ path('lieu') }}">Lieux</a></li>
-						<li><a href="{{ path('monnaie') }}">Monnaie</a></li>
-						<li><a href="{{ path('econnomie') }}">Economie</a></li>
+						<li><a href="{{ path('monnaie') }}">Monnaie</a></li>						
 						<li><a href="{{ path('quality') }}">Qualité</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Personnages</a></li>
 					</ul>
