--- a/src/LarpManager/Views/ressource/update.twig
+++ b/src/LarpManager/Views/ressource/update.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-	<a href="{{ path("niveau") }}">Retour à la liste des ressources</a>
+	<a href="{{ path("ressource") }}">Retour à la liste des ressources</a>
 	
 	<div class="container-fluid">
 		<div class="row">
