--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -75,6 +75,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">Liste des membres</div>
 		<div class="panel-body">
+			<a href="{{ path('groupeSecondaire.admin.newMembre', {'groupeSecondaire': groupeSecondaire.id}) }}">Ajouter un membre</a>
 			<div class="list-group">
 				{% for membre in groupeSecondaire.membres %}
 					<div class="list-group-item">
