--- a/src/LarpManager/Views/admin/religion/add.twig
+++ b/src/LarpManager/Views/admin/religion/add.twig
@@ -5,7 +5,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("religion/fragment/form.twig",{
+				{{ include("admin/religion/fragment/form.twig",{
 					'legend' : 'Ajout d\'une religion',
 					'action': path('religion.add'), 
 					'form' : form}) }}
