--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -74,6 +74,7 @@
 						<li><a href="{{ path('debriefing.list') }}">Debriefings</a></li>
 						<li><a href="{{ path('rumeur.list') }}">Rumeurs</a></li>
 						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
+						<li><a href="{{ path('lieu') }}">Lieux</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
 						<li><a href="{{ path('objet') }}">Objets</a></li>
 					</ul>
@@ -95,7 +96,6 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('ingredient.admin.list') }}">Ingredients</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
-						<li><a href="{{ path('lieu') }}">Lieux</a></li>
 						<li><a href="{{ path('monnaie') }}">Monnaie</a></li>						
 						<li><a href="{{ path('quality') }}">Qualité</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Personnages</a></li>
@@ -138,7 +138,7 @@
 						<li><a href="{{ path('stock_localisation_index') }}">Localisations</a></li>
 						<li><a href="{{ path('stock_rangement_index') }}">Rangements</a></li>
 						<li><a href="{{ path('stock_proprietaire_index') }}">Proprietaires</a></li>
-						<li><a href="{{ path('stock_objet_list',{'page':1}) }}">Objets</a></li>
+						<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
 						<li><a href="{{ path('stock_objet_export') }}">Exporter</a></li>
 					</ul>
 				</li>
