--- a/src/LarpManager/Views/stock/objet/detail.twig
+++ b/src/LarpManager/Views/stock/objet/detail.twig
@@ -2,12 +2,19 @@
 
 {% block content %}
 
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
+		<li>{{ objet.nom }}</li>
+	</ol>
+	
 <div class="well well-sm">
 
 	<div class="page-header">
 		<h1>Détail de {{ objet.code }} - {{ objet.nom }} 
-		<a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-primary" role="button">Modifier</a> 
-		<a href="{{ path('stock_objet_clone', {index: objet.id}) }}" class="btn btn-primary" role="button">Cloner</a>
+		<a href="{{ path('stock_objet_update', {'objet': objet.id}) }}" class="btn btn-primary" role="button">Modifier</a> 
+		<a href="{{ path('stock_objet_clone', {'objet': objet.id}) }}" class="btn btn-primary" role="button">Cloner</a>
+		<a href="{{ path('stock_objet_delete', {'objet': objet.id}) }}" class="btn btn-danger" role="button">Supprimer</a>
 		</h1>		
 	</div>
 
@@ -28,7 +35,7 @@
 						</ul>
 						
 						{% if objet.photo %}
-        					<img src="{{ path('stock_objet_photo',{index: objet.id}) }}" alt="{{ objet.photo.name }}" class="img-responsive" />
+        					<img src="{{ path('stock_objet_photo',{'objet': objet.id}) }}" alt="{{ objet.photo.name }}" class="img-responsive" />
         				{% endif %}
 					</div>
 				</div>
