--- a/src/LarpManager/Views/stock/objet/clone.twig
+++ b/src/LarpManager/Views/stock/objet/clone.twig
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
+		<li><a href="{{ path('stock_objet_detail', {'objet': objet.id}) }}">{{ objet.nom }}</a></li>
+		<li>Clonage</li>
+	</ol>
+	
 <div class="well well-sm">
 
 	<div class="page-header">
@@ -14,7 +21,7 @@
         {% endif %}
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("stock/objet/fragment/form.twig",{'action':  path('stock_objet_clone',{'index':objet.id}), 'form' : form}) }}
+				{{ include("stock/objet/fragment/form.twig",{'action':  path('stock_objet_clone',{'objet':objet.id}), 'form' : form}) }}
 			</div>
 		</div>
 	</div>
