--- a/src/LarpManager/Views/stock/objet/update.twig
+++ b/src/LarpManager/Views/stock/objet/update.twig
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
+		<li><a href="{{ path('stock_objet_detail', {'objet': objet.id}) }}">{{ objet.nom }}</a></li>
+		<li>Modification</li>
+	</ol>
+
 <div class="well well-sm">
 
 	<div class="page-header">
@@ -10,11 +17,11 @@
 
 	<div class="container-fluid">
 	    {% if objet.photo %}
-        	<img src="{{ path('stock_objet_photo',{index: objet.id}) }}" alt="{{ objet.photo.name }}" class="img-responsive" />
+        	<img src="{{ path('stock_objet_photo',{'objet': objet.id}) }}" alt="{{ objet.photo.name }}" class="img-responsive" />
         {% endif %}
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("stock/objet/fragment/form.twig",{'action': path('stock_objet_update',{'index':objet.id}), 'form' : form}) }}
+				{{ include("stock/objet/fragment/form.twig",{'action': path('stock_objet_update',{'objet':objet.id}), 'form' : form}) }}
 			</div>
 		</div>
 	</div>
