Ajout de la gestion de modules d'extension. Ajout de la possibilité de lié des objets de jeu à des groupes ou des personnages.

--- a/src/LarpManager/Views/admin/objet/new.twig
+++ b/src/LarpManager/Views/admin/objet/new.twig
@@ -13,7 +13,7 @@
 	<div class="well well-sm">
 		<div class="row">
 			<div class="col-md-6">
-				<form action="{{ path('objet.new', {'objet': objet.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
+				<form action="{{ path('item.new', {'objet': objet.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 					{{ form(form) }}
 				</form>
