--- a/src/LarpManager/Views/admin/groupe/fragment/enveloppe.twig
+++ b/src/LarpManager/Views/admin/groupe/fragment/enveloppe.twig
@@ -73,6 +73,19 @@ TOTAL : {{ groupe.richesseTotale|default(0) }} PA
 </ul>
 </div>
 
+<h6><i class="fa fa-circle"></i><strong>&nbsp;Objets</strong>. <a href=" {{ path('groupe.admin.items', {'groupe': groupe.id}) }}">Modifier la liste des objets</a></h6>
+<div class="white-box">
+<p>Vous pouvez ajoutez des objets dans l'enveloppe de groupe. Si l'objet que vous voulez ajouter n'existe pas encore, vous pouvez le créer vous-même.</p>
+<ul>
+{% for item in groupe.items %}
+	<li><a href="{{ path('item.detail', {'item':item.id}) }}"><strong>{{ item.numero }}</strong>&nbsp;{{ item.label }}</a></li>
+{% else %}
+	<li>Aucun</li>
+{% endfor %}
+</ul>
+</div>
+
+
 <h6><i class="fa fa-circle"></i><strong>&nbsp;Autre</strong>. <a href="{{ path('groupe.envelope', {'groupe':groupe.id}) }}"><strong>Modifier le contenu</strong></a></h6>
 <div class="white-box">
 {{ groupe.materiel|markdown }}
@@ -90,6 +103,14 @@ TOTAL : {{ groupe.richesseTotale|default(0) }} PA
 				<a href=" {{ path('groupe.personnage.documents', {'groupe': groupe.id, 'personnage': participant.personnage.id}) }}">Modifier la liste de documents</a>
 				{% for document in participant.personnage.documents %}
 					<li><a href="{{ path('document.detail', {'document':document.id}) }}"><strong>{{ document.code }}</strong>&nbsp;{{ document.titre }}</a></li>
+				{% else %}
+					<li>Aucun</li>
+				{% endfor %}
+			</div>
+			<div class="white-box">
+				<a href=" {{ path('groupe.personnage.items', {'groupe': groupe.id, 'personnage': participant.personnage.id}) }}">Modifier la liste des objets</a>
+				{% for item in participant.personnage.items %}
+					<li><a href="{{ path('item.detail', {'item':item.id}) }}"><strong>{{ item.numero }}</strong>&nbsp;{{ item.label }}</a></li>
 				{% else %}
 					<li>Aucun</li>
 				{% endfor %}
