--- a/src/LarpManager/Views/admin/objet/index.twig
+++ b/src/LarpManager/Views/admin/objet/index.twig
@@ -33,8 +33,7 @@ a {
 {
 	color: #000;
 	font-weight: bold;
-	border : 1px solid #000;
-	width : 200px;
+	width : 167px;
 	padding : 5px 5px 5px 5px; 
 }
 
@@ -70,22 +69,48 @@ a {
 		 	<ul class="waterfall center-block">
 	    		{% for item in items%}
 		    		<li class="pin">
-		    			<div class="item {% if item.couleur == 'bleu' %}item-bleu{% else %}item-orange{% endif %}">
-							<div class="item-header">
-								{{ item.numero }}
-								<span class="pull-right">{{ item.quality.numero }}{{ item.identification }}</span>
-							</div>
-							<div class="item-text">
-								{{ item.description|markdown }}
-							</div>
-						</div>
-		    			<img src="{{ path('stock_objet_photo',{'objet': item.objet.id, 'miniature': true}) }}" alt="{{ item.label }}" />
-				  		
-				  		<div>
-							<strong>{{ item.label }}</strong>
-							{{ item.description|markdown }}
-							{{ item.special|markdown }}
-						</div>
+		    			<ul class="list-group">
+		    				<li class="list-group-item">
+				    			<div class="item {% if item.couleur == 'bleu' %}item-bleu{% else %}item-orange{% endif %}">
+									<div class="item-header">
+										{{ item.numero }}
+										<span class="pull-right">{{ item.quality.numero }}{{ item.identification }}</span>
+									</div>
+									<div class="item-text">
+										{{ item.description|markdown }}
+									</div>
+								</div>
+								<a href="{{ path('item.detail', {'item': item.id}) }}">
+				    				<img src="{{ path('stock_objet_photo',{'objet': item.objet.id, 'miniature': true}) }}" alt="{{ item.label }}" />
+				    			</a>
+				    		</li>
+		    				<li class="list-group-item">
+				  				<div class="btn-group" role="group" aria-label="...">
+						  			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		      							Action
+		      							<span class="caret"></span>
+		    						</button>
+		    						<ul class="dropdown-menu">
+		    							<li><a href="{{ path('item.update', {'item': item.id}) }}">Modifier</a></li>
+		    							<li><a href="{{ path('item.delete', {'item': item.id}) }}">Supprimer</a></li>
+					  				</ul>
+					  			</div>
+					  		</li>
+			  				<li class="list-group-item">
+						  		<div>
+									{{ item.description|markdown }}
+									{{ item.special|markdown }}
+								</div>
+							</li>
+							<li class="list-group-item">
+						
+								<div>
+									<strong>Qui possède cet objet ?</strong><br />
+									Groupe : {{ item.groupes|join(',') }}<br />
+									Personnage : {{ item.personnages|join(',') }}<br />
+								</div>
+							</li>
+						</ul>
 			    	</li>
 	  			{% endfor %}
 	  		</ul>
