--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -76,7 +76,7 @@
 						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
 						<li><a href="{{ path('lieu') }}">Lieux</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
-						<li><a href="{{ path('objet') }}">Objets</a></li>
+						<li><a href="{{ path('items') }}">Objets</a></li>
 					</ul>
 				</li>
 			{% endif %}
@@ -169,6 +169,11 @@
 				</ul>
 			</li>
 			{% endif %}
+			
+			{% block module_menu %}
+				{% include 'module/menu.twig' %}
+			{% endblock module_menu %}
+			
 		</ul>
 	</div>
 </div>
